# search_engine

./: .gitignore  CMakeLists.txt  README.md  config.json  requests.json
config_example/: config.json  requests.json
example_files/: file2.txt
files/: 1.txt  2.txt  3.txt
src/: main.cpp
src/classes/inverted_index/: inverted_index.cpp  inverted_index.hpp
src/classes/json_converter/: json_converter.cpp  json_converter.hpp
src/classes/search_server/: search_server.cpp  search_server.hpp
src/test/: tests.cpp
